# hyprclip

./: .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  install.sh
daemon/: Cargo.toml
daemon/src/: main.rs
gui/: Cargo.toml
shared/src/: lib.rs
src/: clear.rs  clipboard.rs  clipboard_state.rs  config.rs  error.rs  history.rs  main.rs  util.rs
src/clipboard/: mod.rs  watch.rs
src/ui/: app.rs  main.rs  mod.rs
src/watcher/: mod.rs  watch.rs
src/waybar/: mod.rs
systemd/: hyprclip-watcher.service
waybar/: Cargo.toml
waybar/src/: main.rs
