[package]
name = "hyprclip"
version = "0.1.0"
edition = "2021"
authors = ["Richard Taesler <officiall.xdragonyt@gmail.com>"]
description = "Clipboard Manager mit GUI und Waybar-Integration"
license = "MIT"
repository = "https://github.com/XsnilzX/hyprclip"

[dependencies]
chrono = "0.4"                                     # Time and Date Handling
clap = { version = "4.4", features = ["derive"] }  # CLI optional
dirs = "5.0"                                       # Directory Access
eframe = "0.31"                                    # Für GUI mit egui/eframe
egui = "0.31"
egui_extras = "0.31"
image = "0.25.6"                                   # Für Bilder
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
wl-clipboard-rs = "0.9.2"                          # Clipboard-Access

[features]
default = ["ui", "waybar"]
ui = []
waybar = []
